# reformed-feed

./: .gitignore  .gitmodules  Cargo.toml  config.toml  feed.xml  state.json
.github/workflows/: daily-proportional.yaml  generate-feed.yml
doc-feed/: Cargo.toml
doc-feed/src/: document.rs  feed.rs  lib.rs  schedule.rs  state.rs
etc/: config.toml
reformed-creeds/: Cargo.toml
reformed-creeds/src/: lib.rs  registry.rs
reformed-creeds/src/parse/: articles.rs  canon.rs  catechism.rs  confession.rs  creed.rs  mod.rs  theses.rs
reformed-creeds/src/types/: articles.rs  canon.rs  catechism.rs  confession.rs  creed.rs  theses.rs
reformed-feed/: Cargo.toml
reformed-feed/src/: config.rs  lib.rs  main.rs  registry.rs
reformed-feed/src/bridge/: documents.rs  mod.rs  parse.rs
reformed-feed/src/documents/: articles.rs  canon.rs  catechism.rs  confession.rs  creed.rs  mod.rs  theses.rs
reformed-feed/src/feed/: generate.rs  mod.rs
reformed-feed/src/parse/: articles.rs  canon.rs  catechism.rs  confession.rs  creed.rs  mod.rs  theses.rs
reformed-feed/src/schedules/: frequency.rs  mod.rs  ordering.rs  presets.rs
reformed-feed/tests/: config.rs  documents.rs  parse.rs  registry.rs  schedules.rs
